--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1095,8 +1095,7 @@
         
         .use-case-example {
             overflow: visible;
-            padding: 2rem;
-            margin: 4rem 0;
+            margin: 16rem 0;
             position: relative;
         }
         
@@ -1220,10 +1219,8 @@
         }
         
         .scenario-stats {
-            display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 2rem;
-            margin-top: 3rem;
             padding-top: 2rem;
             border-top: 1px solid rgba(0,229,255,0.1);
         }
@@ -1437,7 +1434,6 @@
             min-height: 600px;
             overflow:visible;
             perspective: 1000px;
-            margin: 4rem auto;
             max-width: 1883px;
         }
         
@@ -1545,4 +1541,5 @@
         }
 
         .timeline-wheel * {
+            font-size: 1.32rem;
         }
