--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -264,6 +264,13 @@
             grid-template-columns: repeat(3, 1fr); /* This makes it 3 columns */
             gap: 2rem;
             margin-top: 2rem;
+            overflow: scroll;
+            -ms-overflow-style: none;  /* Hide scrollbar for IE and Edge */
+            scrollbar-width: none;  /* Hide scrollbar for Firefox */
+        }
+
+        .industry-grid::-webkit-scrollbar {
+            display: none;  /* Hide scrollbar for Chrome, Safari and Opera */
         }
 
         .data-flow-container {
