--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -338,6 +338,13 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    overflow: scroll;
+    -ms-overflow-style: none;  /* Hide scrollbar for IE and Edge */
+    scrollbar-width: none;  /* Hide scrollbar for Firefox */
+}
+
+.integration-examples::-webkit-scrollbar {
+    display: none;  /* Hide scrollbar for Chrome, Safari and Opera */
 }
 
 .integration-item {
