--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -19,7 +19,7 @@
             overflow-x: hidden;
             position: relative;
         }
-
+        
         .hero-bg {
             position: fixed;
             top: 0;
@@ -739,7 +739,7 @@
         .rotating-logos {
             width: 100%;
             overflow: hidden;
-            background: rgba(0,0,0,0.3);
+            background: rgb(24 105 189 / 60%);
             backdrop-filter: blur(5px);
             padding: 1.5rem 0; /* Increased padding */
             margin-bottom: 2rem;
